@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2024-03-07T00:24:01Z",
+  "timestamp" : "2024-03-07T08:06:57Z",
   "count_outdated" : 707,
   "uniques_outdated" : 340,
-  "count" : 734,
-  "uniques" : 354,
+  "count" : 736,
+  "uniques" : 356,
   "clones" : [
     {
       "timestamp": "2024-02-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -130,6 +130,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-03-07T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
