@@ -1,10 +1,10 @@
 {
-  "count": 27,
-  "uniques": 1,
+  "count": 28,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2024-02-22T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -71,6 +71,11 @@
       "timestamp": "2024-03-06T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-03-07T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
