@@ -1,3 +1,12 @@
+2024-03-07T08:06:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8184842092 # 181
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-07
+* notice: last 14d: unq all: 2 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 340 707 / 354 734
+* notice: next accum: outdated-unq outdated-all / unq all: 340 707 / 356 736
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2024-02-22 2024-03-07]
+
 2024-03-07T00:24:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8180788357 # 180
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-03-07
